// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`side-nav/Submodule snapshot tests renders a link 1`] = `
<a
  className="hig--light-theme hig__side-nav__submodule"
  href="http://example.com"
  tabIndex="0"
>
  Module
</a>
`;

exports[`side-nav/Submodule snapshot tests renders an external link 1`] = `
<a
  className="hig--light-theme hig__side-nav__submodule"
  href="http://example.com"
  tabIndex="0"
  target="_blank"
>
  Module
  <svg
    height="8"
    viewBox="0 0 9 8"
    width="9"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.707 6.43V.5H1.79m-.704 6.61l6.6-6.6"
      fill="none"
      stroke="#2E4258"
    />
  </svg>
</a>
`;

exports[`side-nav/Submodule snapshot tests renders with a click handler 1`] = `
<div
  className="hig--light-theme hig__side-nav__submodule"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
/>
`;

exports[`side-nav/Submodule snapshot tests renders with minimal props 1`] = `
<div
  className="hig--light-theme hig__side-nav__submodule"
  role="button"
  tabIndex="0"
>
  Module
</div>
`;

exports[`side-nav/Submodule snapshot tests renders with no props 1`] = `
<div
  className="hig--light-theme hig__side-nav__submodule"
  role="button"
  tabIndex="0"
/>
`;
